[package]
name = "cryptoexch"
version = "0.1.0"
authors = ["gwierzchowski <gwierzchowski@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mod_bitbay", "out_csv", "out_pb"]
# default = ["mod_bitbay", "out_csv"]

# Cause data structures to implement Debug
# with_debug = []

# Enables support for https://bitbay.net
mod_bitbay = []

# Enables support for CSV output format
out_csv = ["csv"]

# Enables support for Protocol Buffers output format
out_pb = ["protobuf", "protobuf-codegen-pure"]

script_rhai = ["rhai"]

# Logging based on env_logger crate
# log_env = ["env_logger"]

[dependencies]
actix = "0.9"
actix-rt = "1.1"
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
csv = { version = "1.1", optional = true }
lazy_static = "1.4"
log = "0.4"
# env_logger = { version = "0.7", optional = true }
log4rs = "0.13.0"
# quick-protobuf = { version = "0.7", optional = true }
protobuf = { version = "2", optional = true }
regex = "1.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rhai = { version = "0.17.0", features = ["sync"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["fs", "io-util"] }

[build-dependencies]
protobuf-codegen-pure = { version = "2", optional = true }
