[package]
name = "cryptoexch"
version = "0.1.0"
authors = ["gwierzchowski <gwierzchowski@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Stock version should have default = []

# default = ["mod_bitbay", "out_csv", "out_pb"]
# default = ["mod_bitbay", "script_rhai", "out_csv", "out_pb"]
# default = ["mod_bitbay", "script_rhai"]
# default = ["script_rhai"]

# Cause data structures to implement Debug
# with_debug = []

# Enables support for https://bitbay.net
mod_bitbay = []

# Enables support for CSV output format
out_csv = ["csv-async"]

# Enables support for Protocol Buffers output format
out_pb = ["protobuf", "protobuf-codegen-pure"]

script_rhai = ["rhai"]

[dependencies]
actix = "0.10"
actix-rt = "1.1"
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = "2"
# csv-async = { path = "../csv-async", version = "*", features = ["tokio"], optional = true }
csv-async = { version = "1.1", features = ["tokio"], optional = true }
lazy_static = "1.4"
log = "0.4"
# env_logger = { version = "0.7", optional = true }
log4rs = "0.13.0"
# quick-protobuf = { version = "0.7", optional = true }
protobuf = { version = "2", optional = true }
regex = "1.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rhai = { version = "0.19", features = ["sync"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
# Keep in v0.2 until actix wil be upgraded to 0.3
tokio = { version = "0.2", features = ["fs", "io-util"] }

[build-dependencies]
protobuf-codegen-pure = { version = "2", optional = true }
